# tinyrenderers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera.h  cbuffer.h  entity.h  filesystem.h  lc_image.h  lc_image_resize.h  mesh.h  tinyci.h  tinyci.hpp  tinyci_renderer.hpp  tinydx.cpp  tinydx.h  tinyvk.c  tinyvk.h  transform.h
demos/: CMakeLists.txt
demos/assets/BRDF/shaders/: brdf_shader.hlsl
demos/assets/ChessSet/shaders/: build-spv-shaders-dxc.sh  normal_wireframe.gs.spv  normal_wireframe.hlsl  normal_wireframe.ps.spv  normal_wireframe.vs.spv  phong.hlsl  phong.ps.spv  phong.vs.spv
demos/assets/Deferred/shaders/: build-dxbc-shaders-fxc.sh  common.hlsl  composite.cs.hlsl  deferred_gbuffer_color.hlsl  gbuffer_debug.cs.hlsl  (+4 more)
demos/src/: BRDF.cpp  ChessSet.cpp  Shaders.cpp  TriangleTessellation.cpp
demos/src/Common/: GpuImageScale.cpp  GpuImageScale.h
demos/src/Deferred/: DeferredRenderer.cpp  DeferredRenderer.h  Scene.cpp  Scene.h  main.cpp
hlsl-shader-tracking/: CMakeLists.txt
hlsl-shader-tracking/assets/: bad_loop_opt_01.hlsl  bad_loop_opt_01.ps.spv  bad_loop_opt_01.vs.spv  build-shaders-dxc-spirv.sh  build-shaders-glslang.sh  build_shaders.sh  build_shaders_dxc_spirv.sh  opvariable_init.hlsl  opvariable_init.ps.spv  structs_01.hlsl  structs_01.ps.spv  structs_01.ps.spvasm  structs_01.vs.spv  structs_01.vs.spvasm  structs_02.hlsl  structs_02.ps.spv  structs_02.ps.spvasm  structs_02.vs.spv  structs_03.hlsl  structs_03.ps.spv  structs_03.ps.spvasm  structs_03.vs.spvasm  structs_04.hlsl  structs_04.ps.spv  structs_04.vs.spv  structured_buffers_01.cs.spv  structured_buffers_01.hlsl  structured_buffers_01.ps.spv  structured_buffers_01.vs.spv
hlsl-shader-tracking/src/: bad_loop_opt_01.cpp  opvariable_init.cpp  structs_01.cpp  structs_02.cpp  structs_03.cpp  structs_04.cpp  structured_buffers_01.cpp
samples/: CMakeLists.txt
samples/Cinder/assets/: color.hlsl  texture_frag.spv  texture_vert.glsl  texture_vert.spv
samples/Cinder/src/: 01_Color.cpp  02_Texture.cpp  03_UniformBuffer.cpp
samples/Cinder/vc2015/: 01_Color.vcxproj  01_Color.vcxproj.filters  03_UniformBuffer.vcxproj  03_UniformBuffer.vcxproj.filters  Samples_Cinder.sln
samples/GLFW/src/: 01_Color.cpp  02_Texture.cpp  03_UniformBuffer.cpp  04_SimpleCompute.cpp  05_StructuredBuffer.cpp  06_AppendConsume.cpp  07_ByteAddressBuffer.cpp  08_ConstantBuffer.cpp
samples/GLFW/vc2015/: 01_Color.vcxproj  01_Color.vcxproj.filters  02_Texture.vcxproj  02_Texture.vcxproj.filters  03_UniformBuffer.vcxproj  03_UniformBuffer.vcxproj.filters  04_SimpleCompute.vcxproj  04_SimpleCompute.vcxproj.filters  05_StructuredBuffer.vcxproj  05_StructuredBuffer.vcxproj.filters  06_AppendConsume.vcxproj  06_AppendConsume.vcxproj.filters  07_ByteAddressBuffer.vcxproj  07_ByteAddressBuffer.vcxproj.filters  08_ConstantBuffer.vcxproj  08_ConstantBuffer.vcxproj.filters  Samples_GLFW.sln
samples/assets/: append_consume.cs.spv  append_consume.hlsl  build-spv-shaders-dxc.sh  build-spv-shaders-glslang.sh  build-spv-shaders.sh  byte_address_buffer.cs.spv  byte_address_buffer.hlsl  byte_address_buffer.spv  color.ps.spv  color.vs.spv  color_frag.spv  color_vert.spv  compute_blur.hblur_main.cs.spv  compute_blur.vblur_main.cs.spv  constant_buffer.hlsl  constant_buffer.ps.spv  constant_buffer.vs.spv  constant_buffer_frag.spv  constant_buffer_vert.spv  debugging.cs.spv  debugging.hlsl  matrix_row_column.hlsl  opaque_args.ps.spv  opaque_args.vs.spv  passing_arrays.hlsl  passing_arrays.ps.spv  passing_arrays.vs.spv  simple.ps.spv  simple.ps.spvasm  simple.vs.spv  simple_compute.cs.spv  simple_compute.glsl  simple_compute.hlsl  simple_compute.spv  simple_tess_color.hlsl  simple_tess_color.ps.spv  simple_tess_color.vs.spv  simple_tess_isoline.ds.spv  simple_tess_isoline.hlsl  simple_tess_isoline.hs.spv  (+22 more)
samples/assets/glsl/: simple.glsl
samples/assets/tmp_build_files/: append_consume.hlsl.cs.md5  byte_address_buffer.hlsl.cs.md5  color.hlsl.vs_ps.md5  constant_buffer.hlsl.vs_ps.md5  simple.hlsl.vs_ps.md5  simple_compute.hlsl.cs.md5  simple_tess_isoline.hlsl.vs_ps.md5  structured_buffer.hlsl.cs.md5  texture.hlsl.vs_ps.md5  textured_cube.hlsl.vs_ps.md5
samples/new_dxc/: append_consume.cs.spv  build-spv-shaders-dxc.sh  byte_address_buffer.cs.spv  color.hlsl  color.ps.spv  color.vs.spv  compute_blur.hlsl  constant_buffer.ps.spv  constant_buffer.vs.spv  opaque_args.hlsl  opaque_args.ps.spv  passing_arrays.hlsl  passing_arrays.ps.spv  passing_arrays.vs.spv  simple.hlsl  simple.ps.spv  simple.vs.spv  simple.vs.spvasm  simple_compute.cs.spv  simple_compute.hlsl  simple_tess_color.vs.spv  simple_tess_isoline.ds.spv  simple_tess_isoline.hs.spv  simple_tess_isoline.ps.spv  simple_tess_isoline.vs.spv  structured_buffer.cs.spv  texture.ps.spv  texture.vs.spv  triangle_wireframe.gs.spv  triangle_wireframe.hlsl  triangle_wireframe.vs.spv
samples/new_dxc/glsl/: structured_buffer.glsl
samples/new_dxc/tmp_build_files/: opaque_args.hlsl.vs_ps.md5  passing_arrays.hlsl.vs_ps.md5  simple_tess_color.hlsl.vs_ps.md5  triangle_wireframe.hlsl.vs_ps.md5  uniformbuffer.hlsl.vs_ps.md5
samples/src/: 00_Simple.cpp  01_Color.cpp  02_Texture.cpp  03_UniformBuffer.cpp  04_SimpleCompute.cpp  05_StructuredBuffer.cpp  06_AppendConsume.cpp  07_ByteAddressBuffer.cpp  08_ConstantBuffer.cpp  09_OpaqueArgs.cpp  10_PassingArrays.cpp  11_TexturedCube.cpp  12_SimpleGeometryShader.cpp  13_SimpleTessellationShader.cpp  14_ComputeBlur.cpp  15_MatrixRowColumn.cpp  XX_Debugging.cpp
samples/tinyci/assets/: basic.hlsl  basic_frag.glsl  basic_frag.spv  basic_vert.glsl  basic_vert.spv  color_frag.glsl  color_vert.glsl  texture.hlsl  texture_frag.glsl  uniformbuffer.hlsl  uniformbuffer_vert.glsl  uniformbuffer_vert.spv
samples/tinyci/src/: 01_Color.cpp  02_Texture.cpp  03_UniformBuffer.cpp  tinyciApp.cpp
samples/tinyci/vc2015/: 01_Color.vcxproj  02_Texture.vcxproj  02_Texture.vcxproj.filters  03_UniformBuffer.vcxproj  03_UniformBuffer.vcxproj.filters  tinyci.sln  tinyci.vcxproj  tinyci.vcxproj.filters
show-and-tell/: CMakeLists.txt
show-and-tell/src/: ChessSet.cpp
(+43 files in other folders)
