cmake_minimum_required(VERSION 3.0)

project(samples)

include_directories(${tinyrenders_dir} ${tinyrenders_include_dir})
include_directories(${CMAKE_SOURCE_DIR}/third_party/stb)

include_directories(${glfw_INCLUDE_DIRS})
link_libraries(glfw glm)

include_directories(${VULKAN_INCLUDE_DIR})
link_libraries(${VULKAN_LIBRARY})

function(add_vk sample_name)
    set(target_name "${sample_name}_VK")
    add_executable(${target_name} ${CMAKE_CURRENT_SOURCE_DIR}/src/${sample_name}.cpp
                                  ${CMAKE_SOURCE_DIR}/tinyvk.h)
    if(UNIX)
        target_compile_definitions(${target_name} PRIVATE -DTINY_RENDERER_VK)
        target_compile_options(${target_name} PRIVATE -std=c++14)
        target_link_libraries(${target_name} PRIVATE X11-xcb)
    elseif(WIN32)
	target_compile_definitions(${target_name} PRIVATE -DTINY_RENDERER_VK -D_CRT_SECURE_NO_WARNINGS)
        set_target_properties(${target_name} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup /SUBSYSTEM:Windows /INCREMENTAL:NO")
        set_target_properties(${target_name} PROPERTIES FOLDER "tinyrenderers/vk")        
    endif()     
endfunction()

add_vk(00_Simple)
add_vk(01_Color)
add_vk(02_Texture)
add_vk(03_UniformBuffer)
add_vk(04_SimpleCompute)
add_vk(05_StructuredBuffer)
add_vk(06_AppendConsume)
add_vk(07_ByteAddressBuffer)
add_vk(08_ConstantBuffer)
add_vk(09_OpaqueArgs)
add_vk(10_PassingArrays)
add_vk(11_TexturedCube)
add_vk(12_SimpleGeometryShader)
add_vk(13_SimpleTessellationShader)

if(WIN32)
    function(add_dx sample_name)
        set(target_name "${sample_name}_DX")
        add_executable(${target_name} ${CMAKE_CURRENT_SOURCE_DIR}/src/${sample_name}.cpp
                                      ${CMAKE_SOURCE_DIR}/tinydx.h)
        target_compile_definitions(${target_name} PRIVATE -DTINY_RENDERER_DX -D_CRT_SECURE_NO_WARNINGS)
        set_target_properties(${target_name} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup /SUBSYSTEM:Windows /INCREMENTAL:NO")
        set_target_properties(${target_name} PROPERTIES FOLDER "tinyrenderers/dx")
    endfunction()

    add_dx(00_Simple)
    add_dx(01_Color)
    add_dx(02_Texture)
    add_dx(03_UniformBuffer)
    add_dx(04_SimpleCompute)
    add_dx(05_StructuredBuffer)
    add_dx(06_AppendConsume)
    add_dx(07_ByteAddressBuffer)
    add_dx(08_ConstantBuffer)
    add_dx(09_OpaqueArgs)
    add_dx(10_PassingArrays)
    add_dx(11_TexturedCube)
    add_dx(12_SimpleGeometryShader)
	add_dx(13_SimpleTessellationShader)
endif()
